@@ -1191,20 +1191,20 @@ Hasofer reliability index = 2.91809
 ************************************************************************************************
 **************************************** MONTE CARLO *******************************************
 ************************************************************************************************
-Pf estimation = 3.37553e-03
-Pf Variance estimation = 2.83893e-06
-CoV = 0.49916
-90% Confidence Interval = 5.54287e-03
-CI at 90% =[ 6.04093e-04 ; 6.14696e-03 ]
+Pf estimation = 4.43813e-03
+Pf Variance estimation = 1.96096e-07
+CoV = 0.09978
+90% Confidence Interval = 1.45677e-03
+CI at 90% =[ 3.70975e-03 ; 5.16652e-03 ]
 ************************************************************************************************
 
 ************************************************************************************************
 ******************************************* L H S **********************************************
 ************************************************************************************************
-Pf estimation = 4.62500e-03
-Pf Variance estimation = 5.75451e-07
-CoV = 0.16402
-90% Confidence Interval = 2.49552e-03
-CI at 90% =[ 3.37724e-03 ; 5.87276e-03 ]
+Pf estimation = 4.10442e-03
+Pf Variance estimation = 1.67771e-07
+CoV = 0.09979
+90% Confidence Interval = 1.34746e-03
+CI at 90% =[ 3.43069e-03 ; 4.77815e-03 ]
 ************************************************************************************************
 
